# riptide_simulator

./: .gitattributes  README.md  scene_info.yaml
Assets/: Fog.cs  msgbrowser_settings.asset
Assets/Crest/: ThirdPartyNotices.md
Assets/Crest/Crest-Examples/: Crest.Examples.asmdef
Assets/Crest/Crest/Scripts/: BuildCommandBuffer.cs  Crest.asmdef  OceanBuilder.cs  OceanRenderer.cs  OceanValidation.cs  WaterBody.cs
Assets/Crest/Crest/Shaders/: Ocean.shader  OceanGlobals.hlsl  OceanHelpersNew.hlsl  OceanVertHelpers.hlsl
Assets/GameObjects/: Tempest_SingularMesh.fbx  Thruster.prefab  thruster_vector.prefab
Assets/GameObjects/Bootlegger/: BootleggerMat.mat
Assets/GameObjects/Cutie/: CutieMat.mat  CutieMesh.dae
Assets/GameObjects/Fog/: Fog.mat  Gray Volume Fog.prefab
Assets/GameObjects/GMan/: GManMat.mat
Assets/GameObjects/TommyGun/: TommyGunMat.mat
Assets/GameObjects/WaterShader/: UniversalRenderPipelineAsset.asset  Water.mat  Water.shadergraph
Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineAsset.asset  Mat.mat
Assets/Materials/: Shader Graphs_Water.mat  UniversalRenderPipelineAsset.asset  Water.mat
Assets/Prefabs/: Obstacle.prefab  Obstacle_Publisher.cs  ROSConnectionPrefab.prefab
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/RosMessages/Assets/msg/: Vector3Msg.cs
Assets/RosMessages/Riptide/action/: CalibrateBuoyancyAction.cs  CalibrateBuoyancyActionFeedback.cs  CalibrateBuoyancyActionGoal.cs  CalibrateBuoyancyActionResult.cs  CalibrateBuoyancyFeedback.cs  CalibrateBuoyancyGoal.cs  CalibrateBuoyancyResult.cs  CalibrateDragAction.cs  CalibrateDragActionFeedback.cs  CalibrateDragActionGoal.cs  CalibrateDragActionResult.cs  CalibrateDragFeedback.cs  CalibrateDragGoal.cs  CalibrateDragResult.cs  ExecuteTaskAction.cs  ExecuteTaskActionFeedback.cs  ExecuteTaskActionGoal.cs  ExecuteTaskActionResult.cs  ExecuteTaskFeedback.cs  ExecuteTaskGoal.cs  ExecuteTaskResult.cs  FollowTrajectoryAction.cs  FollowTrajectoryActionFeedback.cs  FollowTrajectoryActionGoal.cs  FollowTrajectoryActionResult.cs  FollowTrajectoryFeedback.cs  FollowTrajectoryGoal.cs  FollowTrajectoryResult.cs  ScriptOhioAction.cs  ScriptOhioActionFeedback.cs  ScriptOhioGoal.cs  (+25 more)
Assets/Scenes/: HDRPSimPools.unity  Lighting.lighting  Pools.fbx  SampleScene.unity  Simulator.unity  ass.unity  grabTableWorld.unity  pool scene.unity
Assets/Scenes/HDRPSimPools/: Sky and Fog Settings Profile.asset  Underwater Post processing Profile.asset
Assets/Scenes/Pools/: olympic_pool.prefab
Assets/Scenes/Simulator/: LightingData.asset  Lightmap-0_comp_light.exr  PostProcessingGO Profile.asset  PostProcessingVolume Profile 1.asset  PostProcessingVolume Profile.asset
Assets/Scenes/Simulator_Profiles/: PostProcessingVolume Profile.asset
Assets/Scenes/grabTableWorld/: Main Camera Profile.asset
Assets/Scripts/: CameraCapture.cs  CameraCapture_BACKUP.cs  CameraCapture_BACKUP.txt  FPSCounter.cs  GameSystem.cs  KeyboardMovement.cs  MenuInteractionScript.cs  PlayerCamera.cs  RosSubscriberExample.cs  ShowFPS.cs  ToggleMenuScript.cs  VehiclePose.cs  VehiclePoseSubscriber.cs  poop.cs
Assets/Scripts/HabradorBuoyancy/: BoatPhysics.cs  WaterController.cs
Assets/Scripts/Materials/: LeftCamRT.mat  LeftCameraRT.mat
Assets/Scripts/Physics/: Buoyancy.cs  HydroDynamicDrag.cs  ModelBouyancy.cs  RobotData.cs  RobotForces.cs  Thruster.cs
Assets/Scripts/Tom Weiland Buoyancy/: Floater.cs
Assets/Simple Water Shader HDRP/: OtherWater.shadergraph
Assets/Simple Water Shader HDRP/Materials/: Water_mat_01.mat  Water_mat_04.mat
Assets/Simple Water Shader HDRP/Shaders/: WaterShaderHDRP.shadergraph
Assets/URDF/: puddles.urdf  tempest.urdf
Assets/URDF/Materials/: Default.mat
Assets/_GrabResearch/: Main Camera.prefab  donut.blend  donut.blend1  sphere.blend  table.blend  table.blend1
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
UWRT_Simulator/Assets/Puddles/: FlyCamera.cs  KeyboardMovement.cs
UWRT_Simulator/Assets/Resources/: ROSConnectionPrefab.prefab  RosSubscriberExample.cs  puddles.yaml
UWRT_Simulator/Logs/: ApiUpdaterCheck.txt
UWRT_Simulator/ProjectSettings/: ProjectSettings.asset
UWRT_Simulator/Temp/: ApiUpdater_CheckMovedFrom600b2cfac19f701d8b41b427c51f66df  ApiUpdater_CheckMovedFrombb7a6946c47b21488b566d72e1d88cfc  ApiUpdater_CheckMovedFromec6e0397c50a1385294c6b01ff30f108  Assembly-CSharp.dll.hash  CompilationLog.txt  UnityTempFile-29b81d13d1094e4c39d3b8af60a26a9d  UnityTempFile-32042be1e6c3b0f0291666b9ddfad401  workerlic
UWRT_Simulator/Temp/__Backupscenes/: 0.backup
UserSettings/: EditorUserSettings.asset
c_simulator/: CMakeLists.txt  ProofOfField.asv  ProofOfField.m  package.xml
c_simulator/collision_files/objects/: gate.urdf  octogon.urdf  table.urdf  torpedo.urdf
c_simulator/collision_files/obstacles/: buoy.urdf
c_simulator/collision_files/robots/: liltank.urdf  puddles_placeholder.urdf  talos.urdf
c_simulator/include/c_simulator/: Claw_Object.h  FluidObject.h  RobotClass.h  collisionBox.h  settings.h
c_simulator/launch/: full_simulator.launch.py  physics_simulator.launch.py  simulator.launch.py
c_simulator/src/: FuildObject.cpp  collisionBox_class.cpp  physics_simulator.cpp  robot_class.cpp
camera_faker/: CMakeLists.txt  README.md  package.xml
camera_faker/include/: blurShader.hpp  camera.hpp  causticsManager.hpp  frameBufferObject.hpp  frameShader.hpp  frame_buffer_object.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  modelShader.hpp  object.hpp  objectShader.hpp  obstackeShader.hpp  settings.h  shader.hpp  skyboxShader.hpp  textShader.hpp  texture.hpp  waterShader.hpp
camera_faker/launch/: zedfaker.launch.py
camera_faker/models/: path.fbx  placeholder.txt  table.dae  teset.PLY  teset.STEP
camera_faker/shaders/: blur.fs  frame.fs  frame.vs  model.fs  model.vs  object.fs  object.vs  skybox.fs  skybox.vs  water.fs  water.vs
camera_faker/src/: zed_faker.cpp
camera_faker/textures/task_objects/: Gate-min.png:Zone.Identifier
(+266 files in other folders)
